# CategoryApp/src/docs/swagger.json
@@ -51,6 +51,12 @@
                         "type": "string",
                         "name": "sortingField",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -101,6 +107,13 @@
                         "schema": {
                             "$ref": "#/definitions/categoryType.CategoryPostRequestModel"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
