# TicketApp/src/handler/ticketHandler.go
@@ -7,8 +7,9 @@ import (
 	"TicketApp/src/type/util"
 	"encoding/json"
 	"github.com/labstack/echo/v4"
+	"go.mongodb.org/mongo-driver/bson"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 	"net/http"
-	"time"
 )
 
 type TicketHandler struct {
@@ -32,16 +33,16 @@ func NewTicketHandler(ticketService service.TicketService, cfg *ticketConfig.App
 // @Failure      404  {object}  util.Error
 // @Failure      500  {object}  util.Error
 // @Router       /api/tickets/{id} [get]
-func (h *TicketHandler) TicketGetById(ctx echo.Context) error {
+func (t *TicketHandler) TicketGetById(ctx echo.Context) error {
 	id := ctx.Param("id")
 	err := util.ValidateForUserHandlerId(id)
 	if err != nil {
 		return ctx.JSON(err.StatusCode, err)
 	}
 
-	ticket, errSrv := h.ticketService.TicketServiceGetById(id)
+	ticket, errSrv := t.ticketService.TicketServiceGetById(id)
 	if errSrv != nil || ticket == nil {
-		return ctx.JSON(http.StatusNotFound, util.NotFound.ModifyApplicationName("category handler").ModifyErrorCode(4018))
+		return ctx.JSON(http.StatusNotFound, errSrv)
 	}
 
 	return ctx.JSON(http.StatusOK, ticket)
@@ -54,32 +55,23 @@ func (h *TicketHandler) TicketGetById(ctx echo.Context) error {
 // @Accept json
 // @Produce json
 // @Param ticketPostRequestModel body entity.TicketPostRequestModel true "ticketPostRequestModel"
+// @Param Authorization header string true "Authorization"
 // @Success 200 {object} util.PostResponseModel
 // @Failure 400 {object} util.Error
 // @Failure 404 {object} util.Error
 // @Failure 500 {object} util.Error
 // @Router /api/tickets [post]
-func (h *TicketHandler) TicketInsert(ctx echo.Context) error {
+func (t *TicketHandler) TicketInsert(ctx echo.Context) error {
 	ticketPostRequestModel := entity.TicketPostRequestModel{}
 
 	err := json.NewDecoder(ctx.Request().Body).Decode(&ticketPostRequestModel)
 	if err != nil {
 		return ctx.JSON(http.StatusBadRequest, util.InvalidBody.ModifyApplicationName("category handler").ModifyErrorCode(4022).ModifyOperation("POST"))
 	}
-	category := entity.Ticket{
-		CategoryId:     ticketPostRequestModel.CategoryId,
-		Attachments:    ticketPostRequestModel.Attachments,
-		Answers:        ticketPostRequestModel.Answers,
-		Subject:        ticketPostRequestModel.Subject,
-		Body:           ticketPostRequestModel.Body,
-		CreatedBy:      ticketPostRequestModel.CreatedBy,
-		CreatedAt:      time.Now(),
-		UpdatedAt:      time.Now(),
-		LastAnsweredAt: time.Now(),
-		Status:         byte(entity.CREATED),
-	}
 
-	res, errSrv := h.ticketService.TicketServiceInsert(category)
+	authorization := ctx.Request().Header["Authorization"][0]
+
+	res, errSrv := t.ticketService.TicketServiceInsert(ticketPostRequestModel, authorization)
 	if errSrv != nil {
 		return ctx.JSON(errSrv.StatusCode, errSrv)
 	}
@@ -98,14 +90,14 @@ func (h *TicketHandler) TicketInsert(ctx echo.Context) error {
 // @Failure      404  {object}  util.Error
 // @Failure      500  {object}  util.Error
 // @Router       /api/tickets/{id} [delete]
-func (h *TicketHandler) TicketDeleteById(ctx echo.Context) error {
+func (t *TicketHandler) TicketDeleteById(ctx echo.Context) error {
 	id := ctx.Param("id")
 	err := util.ValidateForUserHandlerId(id)
 	if err != nil {
 		return ctx.JSON(err.StatusCode, err)
 	}
 
-	res, errSrv := h.ticketService.TicketServiceDeleteById(id)
+	res, errSrv := t.ticketService.TicketServiceDeleteById(id)
 	if errSrv != nil {
 		return ctx.JSON(errSrv.StatusCode, errSrv)
 	}
@@ -120,14 +112,15 @@ func (h *TicketHandler) TicketDeleteById(ctx echo.Context) error {
 // @Accept json
 // @Produce json
 // @Param filter query util.Filter true "filter"
+// @Param categoryId query string false "categoryId"
 // @Success 200 {object} util.GetAllResponseType
 // @Failure 400 {object} util.Error
 // @Failure 404 {object} util.Error
 // @Failure 500 {object} util.Error
 // @Router /api/tickets [get]
-func (h *TicketHandler) TicketGetAll(ctx echo.Context) error {
+func (t *TicketHandler) TicketGetAll(ctx echo.Context) error {
 	filter := util.Filter{}
-	page, pageSize := util.ValidatePaginationFilters(ctx.QueryParam("page"), ctx.QueryParam("pageSize"), h.cfg.MaxPageLimit)
+	page, pageSize := util.ValidatePaginationFilters(ctx.QueryParam("page"), ctx.QueryParam("pageSize"), t.cfg.MaxPageLimit)
 	filter.Page = page
 	filter.PageSize = pageSize
 
@@ -136,8 +129,18 @@ func (h *TicketHandler) TicketGetAll(ctx echo.Context) error {
 	filter.SortingDirection = sortingDirection
 
 	//filtering
+	//CategoryId
+	filters := map[string]interface{}{}
+	if categoryId := ctx.QueryParam("categoryId"); categoryId != "" {
+		filters["categoryId"] = bson.M{"$regex": primitive.Regex{
+			Pattern: categoryId,
+			Options: "i",
+		}}
+	}
 
-	tickets, err := h.ticketService.TicketServiceGetAll(filter)
+	filter.Filters = filters
+
+	tickets, err := t.ticketService.TicketServiceGetAll(filter)
 	if err != nil {
 		return ctx.JSON(err.StatusCode, err)
 	}
@@ -146,4 +149,31 @@ func (h *TicketHandler) TicketGetAll(ctx echo.Context) error {
 		return ctx.JSON(http.StatusNotFound, util.NotFound.ModifyApplicationName("user handler").ModifyErrorCode(5001))
 	}
 	return ctx.JSON(http.StatusOK, tickets)
+}
+
+// GetCountByCreatedId godoc
+// @Summary      Gets count by created id
+// @Description  Gets count by created id
+// @Tags         tickets
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "id"
+// @Success      200  {object}  int64
+// @Failure      400  {object}  util.Error
+// @Failure      404  {object}  util.Error
+// @Failure      500  {object}  util.Error
+// @Router       /api/tickets/getCountByCreatedId/{id} [get]
+func (t *TicketHandler) GetCountByCreatedId(ctx echo.Context) error {
+	id := ctx.Param("id")
+	err := util.ValidateForUserHandlerId(id)
+	if err != nil {
+		return ctx.JSON(err.StatusCode, err)
+	}
+
+	res, errSrv := t.ticketService.TicketServiceGetCountByCreatedId(id)
+	if errSrv != nil {
+		return ctx.JSON(errSrv.StatusCode, errSrv)
+	}
+
+	return ctx.JSON(http.StatusOK, res)
 }
